# pico-mastdon-avatar

./: .gitignore  CMakeLists.txt  JPEGDEC.cpp  JPEGDEC.h  README.md  lwipopts.h  main.cpp  mastodon.c  mastodon.h  secrets.h  st7789_lcd.c  st7789_lcd.h  tls_client.c  tls_client.h
.github/workflows/: cmake.yml
